--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,55 +1,36 @@
-name: CI - Test and Lint
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-latest
 
-    # env:
-    #   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-    
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
       with:
-        python-version: 3.9
-    - name: Format code
-      run: |
-        pip install black
-        black src/ --line-length=120
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest flake8
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: your-dockerhub-username/your-image-name:latest
 
-    - name: Lint with flake8
-      run: |
-        # Ignore __init__.py warnings and long lines
-        flake8 src/ --exclude=__init__.py --max-line-length=120
-
-    - name: Run tests
-      run: |
-        pytest tests/ || echo "No tests found"
-
-    - name: Post Setup Python
-      run: |
-        echo "Python setup completed successfully"
-
-    - name: Post Checkout code
-      run: |
-        echo "Code checkout completed successfully"
-
-    - name: Complete job
-      run: |
-        echo "All CI steps completed successfully"
-        
+    - name: Done
+      run: echo "Docker image built and pushed successfully."
