--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: knowledgenexus/my-app:latest
+        tags: jeetchandak/knowledgenexus:latest
 
     - name: Done
       run: echo "Docker image built and pushed successfully."
